After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 781267 - adaptivedemux: Fix segment creation/adaptation some more
adaptivedemux: Fix segment creation/adaptation some more
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
unspecified
Other All
: Normal normal
: 1.11.91
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-04-13 11:29 UTC by Edward Hervey
Modified: 2017-04-14 06:06 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
adaptivedemux: Fix segment creation/adaptation some more (4.71 KB, patch)
2017-04-13 11:29 UTC, Edward Hervey
committed Details | Review

Description Edward Hervey 2017-04-13 11:29:06 UTC
See commit
Comment 1 Edward Hervey 2017-04-13 11:29:11 UTC
Created attachment 349792 [details] [review]
adaptivedemux: Fix segment creation/adaptation some more

Take into account the segment stop and the negative rates
Comment 2 Sebastian Dröge (slomo) 2017-04-13 12:02:33 UTC
Review of attachment 349792 [details] [review]:

Looks mostly good, just one minor thing before merging

::: gst-libs/gst/adaptivedemux/gstadaptivedemux.c
@@ +1138,3 @@
      */
+    GST_DEBUG ("Using demux segment %" GST_SEGMENT_FORMAT, &demux->segment);
+    GST_DEBUG ("period_start: %" GST_TIME_FORMAT " offset: %" GST_TIME_FORMAT,

Use GST_DEBUG_OBJECT() here
Comment 3 Edward Hervey 2017-04-14 06:05:47 UTC
Fixed the debug statements and pushed it.

commit 44ec6bb2f3a32db06d4b6c0d28057c93dbed1304
Author: Edward Hervey <edward@centricular.com>
Date:   Thu Apr 13 13:27:57 2017 +0200

    adaptivedemux: Fix segment creation/adaptation some more
    
    Take into account the segment stop and the negative rates
    
    https://bugzilla.gnome.org/show_bug.cgi?id=781267