adaptivedemux: Fix segment creation/adaptation some more

Take into account the segment stop and the negative rates

https://bugzilla.gnome.org/show_bug.cgi?id=781267